# castforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: nitan-podcast-weekly.yml
.trellis/spec/castforge/: framework-show-ownership.md  index.md  python-packaging.md  verification.md
castforge/: __init__.py  __main__.py  briefing.py  export.py  notebooklm_audio.py  pipeline.py
docs/: instance-contract.md
examples/: podcast.yaml  weekly-podcast.yml
